# rvscript

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  setup.sh
.github/workflows/: engine.yml  unittests.yml
engine/: CMakeLists.txt  api  build.sh  debug.sh
engine/api/: api.h  api_impl.h  api_structs.h  embedded_string.hpp  ffi.h  ffi.nim  shared_memory.h  syscalls.h
engine/mods/hello_world/: CMakeLists.txt
engine/mods/hello_world/scripts/: CMakeLists.txt  debug.gdb  gameplay.elf  level1.elf  level2.elf
engine/mods/hello_world/scripts/src/: events.cpp  events.hpp  gameplay.cpp  gameplay.nim  gameplay.symbols  gameplay_multiprocess.cpp  gameplay_remote.cpp  interface.hpp  level1.cpp  level1_remote.cpp  level1_threads.cpp  level2.cpp
engine/script/: CMakeLists.txt  event.hpp  function_group.cpp  function_group.hpp  script.cpp  script.hpp  script_args.hpp  script_bench.cpp  script_debug.cpp  script_remote.cpp
engine/script/machine/: api.h  api_structs.h  blackbox.hpp  include_api.hpp  syscalls.h
engine/script/util/: crc32.hpp
engine/scripts/: CMakeLists.txt
engine/scripts/src/: events.cpp  events.hpp  gameplay.cpp  gameplay_remote.cpp  gui.cpp  interface.hpp  level1.cpp  level1_local.cpp  level1_remote.cpp  level1_threads.cpp  level2.cpp  local.hpp
engine/src/: CMakeLists.txt  debugging.cpp  main.cpp  main_screen.cpp  main_screen.hpp  manage_scripts.cpp  manage_scripts.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  script_functions.cpp  script_functions.hpp  setup_gui.cpp  setup_timers.cpp  test_dynamic.cpp  timers.cpp  timers.hpp  timers_setup.cpp
engine/src/machine/: CMakeLists.txt  api.h  api_structs.h  blackbox.hpp  syscalls.h
engine/src/script/: CMakeLists.txt  blackbox.hpp  event.hpp  helpers.hpp  script.cpp  script.hpp  script_args.hpp  script_bench.cpp  script_debug.cpp  script_depth.hpp  script_fork.cpp  script_remote.cpp  script_syscalls.cpp  script_syscalls.hpp  string_hash.hpp
engine/src/script/machine/: api.h  api_structs.h  blackbox.hpp  include_api.hpp  syscalls.h
ext/: CMakeLists.txt  strf
micro/: CMakeLists.txt  README.md  micro.cmake  nim.cmake  toolchain.cmake
micro/api/: api.h  api_impl.h  api_structs.h  shared_memory.h  syscalls.h
micro/ext/: CMakeLists.txt
micro/libc/: CMakeLists.txt  assert.cpp  engine.cpp  engine.hpp  heap.cpp  heap.hpp  libc.cpp  libcxx.cpp  microthread.cpp  microthread.hpp  print.cpp  start.cpp  write.cpp
micro/libc/include/: common.hpp  crc32.hpp  event_loop.hpp  function.hpp  libc.hpp  ringbuffer.hpp  syscall.hpp  tuplecall.hpp
micro/libc/override/: mutex  new
micronim/: CMakeLists.txt  build.sh  micronim.cmake
micronim/env/: ffi.c  ffi.h  libc.c  nim.c
micronim/src/: ffi.nim  hello.nim  panicoverride.nim
programs/: CMakeLists.txt  build.sh  build32.sh  debug.sh  detect_compiler.sh  dynamic_calls.json  symbols.map
programs/dyncalls/: CMakeLists.txt  dyncalls.json  generate.py
programs/micro/: micro.cmake  toolchain.cmake
programs/micro/api/: api.h  api_gui_impl.h  api_impl.h  api_structs.h  embedded_string.hpp  shared_memory.h  syscalls.h
programs/micro/ext/: CMakeLists.txt
programs/micro/libc/: CMakeLists.txt  assert.cpp  engine.cpp  engine.hpp  write.cpp
programs/micro/libc/include/: crc32.hpp  tuplecall.hpp
programs/micro/libc/override/: new
programs/micronim/: CMakeLists.txt  build.sh  build32.sh  dynamic_calls.json  files.txt  micronim.cmake
programs/micronim/env/: ffi.c  ffi.h  libc.c  syscall.h  write.c
programs/micronim/src/: bench.nim  default.symbols  ffi.nim  hello.nim
programs/nelua/: CMakeLists.txt  build.sh  nelua.cmake
programs/nelua/env/: heap.c
programs/nelua/src/: default.symbols  main.nelua
tests/: CMakeLists.txt  basic.cpp  codebuilder.cpp  codebuilder.hpp  codebuilder.sh  event_loop.cpp  events.cpp  limits.cpp  run_unit_tests.sh  timers.cpp
